# libt9

./: .gitignore  CMakeLists.txt  README.md
cli/: CMakeLists.txt  main.c
data/: pg59606.txt
docs/: index.html  index.js  index.wasm  script.js
driver/: Makefile  README.md  kernel.info  main.c
parser/: CMakeLists.txt  main.cc  sentencepiece_model.pb.cc  sentencepiece_model.pb.h
protobuf/: CMakeLists.txt  sentencepiece_model.proto  t9db.pb-c.c  t9db.pb-c.h  t9db.pb.cc  t9db.pb.h  t9db.proto
scripts/: convert.py  word_list.txt
src/: CMakeLists.txt  main.c  parser.c  parser.h  trie.c  trie.h  wordlist.h
webinterface/: Makefile  index.html  main.c  script.js
